# algorithms

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  pyproject.toml  setup.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: demo.py  demo.sh  demo.yml  hooks.yml  pre-commit.yml  test.yml  tests.yml
LeetCode/: leetcode-0020-valid-parentheses.py  leetcode-0021-merge-lists.js  leetcode-0819-most-common-word.js  leetcode-1051-height-checker.js  leetcode_0020_valid_parentheses_solutions.py  leetcode_0021_merge_lists.py  leetcode_0819_most_common_word.py  leetcode_1051_height_checker.py
examples/: csv2json.py  dataclass_intro.py  decorators_corey_schafer.py  dict_values_to_list.py  fibonacci.js  fizzbuzz.js  hello_lines.py  pi_darts.py
js/src/examples/: fibonacci.js  fizzbuzz.js
py/: pyproject.toml
py/algorythms/: __init__.py
py/algorythms/examples/: case.py  csv2json.py  filter_comprehension.py  parse_pyproject_toml.py  pascal.py  paths.py  pi_darts.py
py/algorythms/leet/: leetcode_0020_valid_parentheses.py  leetcode_0020_valid_parentheses_solutions.py  leetcode_0021_merge_lists.py  leetcode_0819_most_common_word.py  leetcode_1051_height_checker.py
py/algorythms/tutorials/: dataclass_intro.py  decorators_corey_schafer.py  decorators_real_python.py  oop_corey_schafer.py  python-packaging.md  talkpython_async.md  talkpython_async_05_threading.py  talkpython_async_07_comparison.py
py/tests/: test_version.py
py/tests/examples/: test_case.py  test_fibonacci.py  test_fizzbuzz.py  test_hello_lines.py  test_palindrome.py  test_parse_pyproject_toml.py  test_paths.py
py/tests/leet/: test_leetcode_0020_valid_parentheses.py  test_leetcode_0819_most_common_word.py
src/algorythms/examples/: dict_values_to_list.py  hello_lines.py
src/algorythms/leet/: leetcode_0020_valid_parentheses.py  leetcode_0819_most_common_word.py
terraform/: terraform-hashicorp-learn.md
terraform/terraform-aws-demo/: example.tf  variables.tf
terraform/terraform-aws-ec2-demo/: example.tf
terraform/terraform-aws-lambda-demo-python/: README.md
tutorials/: decorators_real_python.py  oop_corey_schafer.md  oop_corey_schafer.py  python-packaging.md
