[tool.isort]
profile = "black"
src_paths = ["algorythms"]

[tool.poetry]
name = "algorythms"
version = "0.1.0"
description = "Miscellaneous curiosities from the world of computer programming"
authors = ["Brendon Smith <br3ndonland@protonmail.com>"]
license = "MIT"
homepage = "https://github.com/br3ndonland/algorithms"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
isort = "^5"
mypy = "*"
pre-commit = "^2.6"
pytest = "^5.4"

# Pytest v6 will use [pyproject.toml](https://docs.pytest.org/en/latest/customize.html)
[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]

[build-system]
requires = ["poetry>=1.0.9"]
build-backend = "poetry.masonry.api"
