[tool.isort]
profile = "black"
src_paths = ["algorythms", "tests"]

[tool.poetry]
name = "algorythms"
version = "0.1.0"
description = "Miscellaneous curiosities from the world of computer programming"
authors = ["Brendon Smith <br3ndonland@protonmail.com>"]
license = "MIT"
homepage = "https://github.com/br3ndonland/algorithms"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
isort = "^5"
mypy = "*"
pre-commit = "^2.7"
pytest = "^6.1"

[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
