[tool.isort]
profile = "black"
src_paths = ["algorythms", "tests"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
files = ["**/*.py"]
namespace_packages = true
plugins = "pydantic.mypy"
show_error_codes = true

[tool.poetry]
name = "algorythms"
version = "0.1.0"
description = "Miscellaneous curiosities from the world of computer programming"
authors = ["Brendon Smith <br3ndonland@protonmail.com>"]
license = "MIT"
homepage = "https://github.com/br3ndonland/algorithms"
readme = "../README.md"
include = ["algorythms/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1"
pydantic = "^1.6"
tomli = "^2"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "^3.8.4"
isort = "^5"
mypy = "*"
pre-commit = "^2.7"
pytest = "^6.1"

[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
